tried fixing homepage logo on mobile again

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -54,8 +54,8 @@ section.module.parallax {
   height: 650px;
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  // background-attachment: fixed;
-  background-size: cover;
+  background-attachment: fixed;
+  // background-size: cover;
 }
 section.module.parallax h1 {
   color: rgba(255, 255, 255, 0.8);
